7660B_32Bit_DEMO/7660_demo_cs/usb7660.H


ZT_API  long _stdcall ZT7660_GetCardCount();

//函数功能：返回当前可使用的设备数量，注意这个函数必须在打开设备之前调用
//
//入口参数：
//返回值： 大于等于0  当前可使用设备数量
//         -1  表失败，已经调用过ZT7660_OpenDevice函数

ZT_API long _stdcall ZT7660_OpenDevice(unsigned long cardNO);

//函数名称：ZT7660_OpenDevice
//函数功能：打开设备。必须在调用其他函数之前调用。
//          放在程序初始化时调用比较恰当，只调用一次即可
//入口参数：
//          cardNO：模块号，默认从 1 开始
//                    如果系统中只用了一个USB模块，令这个参数为1就行了
//返回值：  0  表成功
//         -1  表失败，应该进一步调用 ZT7660_GetLastErr 判断出错原因
ZT_API long _stdcall ZT7660_CloseDevice(unsigned long cardNO);

//函数名称：ZT7660_CloseDevice
//函数功能：关闭指定的设备
//
//入口参数：
//          cardNO：模块号，默认从 1 开始
//                    如果系统中只用了一个USB模块，令这个参数为1就行了
//返回值：  0  表成功
//         -1  表失败，应该进一步调用 ZT7660_GetLastErr 判断出错原因
ZT_API unsigned long _stdcall ZT7660_GetLastErr();

//函数名称：ZT7660_GetLastErr
//函数功能：得到当前错误号。如果错误号为0表示无错误
//返回值：错误代码，错误代码含义请看宏定义
ZT_API void _stdcall ZT7660_ClearLastErr();

//函数名称：ZT7660_GetBaseNO
//函数功能：返回当前板卡索引号(cardNO)，芯片号(chipNO)，口号(portNO)和通道号(chNO)，
//          总之带“NO”后缀的参数是从0开始还是从1开始。默认为从1开始
//返回值：返回0  表从0开始
//        返回1  表从1开始
ZT_API long _stdcall ZT7660_AIonce(unsigned long cardNO,
                                   unsigned long chMode,
                                   unsigned long chNO,
                                   unsigned long AIrange,
                                   unsigned long AIAmp,
                                   unsigned long ADstartMode,
                                   unsigned long ADfreq,
                                   unsigned long ABflag,
                                   unsigned long ch1Flag,
                                   unsigned long ADctrlWord,
                                   unsigned long ADoverTime);

//函数名称：ZT7660_AIonce
//函数功能：对指定通道进行单次数据采集。不需要先调用 ZT7660_AIinit
//
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//          chMode：通道方式
//                    0 = 表示单端，固定单通道方式
//                    2 = 表示双端，固定单通道方式
//            chNO：通道号
//                    当chMode = 0 时，为通道号(1--48)
//                    当chMode = 2 时，为通道号(1--24)
//         AIrange：选择对采集到的AD原码值做何种变换，应该与AD采集量程(一般需跳线)相匹配：
//                    AIrange = 0，表示返回原码值，所有卡都有这种方式。
//                                 对于12位的卡返回 0~4095 之间的值
//                                 对于16位的卡返回 0~65535 之间的值
//                    AIrange = 1，表示把原码值转化为 0 -- 5000mV 之间的值，如果此卡没有这种量程，不应选这种方式
//                    AIrange = 2，表示把原码值转化为 0 -- 10000mV 之间的值，如果此卡没有这种量程，不应选这种方式
//                    AIrange = 5，表示把原码值转化为 -5000 -- 5000mV 之间的值，如果此卡没有这种量程，不应选这种方式
//           AIAmp：程控增益系数(0～2)。
//                    0 = 1倍增益(无增益)；1 = 10倍增益；2 = 100倍增益
//     ADstartMode：保留。保持此参数为0
//          ADfreq：保留。保持此参数为0
//          ABflag：设置模块为A型(12bit)还是B型(16bit)
//                    0 = A型；1 = B型
//         ch1Flag：保留。保持此参数为0
//      ADctrlWord：一般保持此参数为0。
//                    若此参数不为0，函数将直接用这个参数的值初始化AD，而对其他影响AD方式的参数，
//                    例如chMode、AIrange、AIAmp、ABflag、ch1Flag的值不予考虑。
//                    此参数的说明请参考说明书中对 usb7660AI 函数的lCode参数的说明。
//      ADoverTime：保留。保持这个参数为0
//返回值： 不等于 -1，表采集到的AD结果
//             -1   ，当 ZT7660_GetLastErr 返回值等于 0 时，表AD结果
//                    当 ZT7660_GetLastErr 返回值小于 0 时，表失败
ZT_API long _stdcall ZT7660_AIinit(unsigned long cardNO,
                                   unsigned long chMode,
                                   unsigned long chNO,
                                   unsigned long AIrange,
                                   unsigned long AIAmp,
                                   unsigned long ADstartMode,
                                   unsigned long ADfreq,
                                   unsigned long ABflag,
                                   unsigned long ch1Flag,
                                   unsigned long ADctrlWord,
                                   unsigned long ADoverTime);

//函数名称：
//函数功能：读取采集模块上硬件缓冲区(FIFO)的状态
//
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//
//返回值：  0  表空
//          1  有数未半满
//          3  半满未全满
//          7  全满
//         -1  表失败，应该进一步调用 ZT7660_GetLastErr 判断出错原因
ZT_API long _stdcall ZT7660_ADstop(unsigned long cardNO);

//函数名称：
//函数功能：停止批量采集。采集的硬件时钟停止，不再往FIFO里放数
//
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//
//返回值：  0  表成功
//         -1  表失败，应该进一步调用 ZT7660_GetLastErr 判断出错原因
ZT_API long _stdcall ZT7660_ClearFifo(unsigned long cardNO);

//函数名称：
//函数功能：清空模块上硬件缓冲区(FIFO)
//
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//
//返回值：  0  表成功
//         -1  表失败，应该进一步调用 ZT7660_GetLastErr 判断出错原因
ZT_API long _stdcall ZT7660_GetSFifoDataCnt(unsigned long cardNO);

//函数名称：
//函数功能：成批读取AD数据。
//          注意：在调用这个函数之前，应该确保已经调用过 ZT7660_AIinit 函数进行了正确的初始化
//                这个函数已被 ZT7660_AIFifoEx 取代，在此处只处于兼容目的提供此函数。
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
// packetBytesSize：包的大小(字节尺寸)，必须是512的倍数
//   wantReadCount：用户希望读出的数据个数，必须是通道的整数倍，且不能超过用户缓冲区的实际大小
//      pResultArr：用户必须申请一个至少含有 wantReadCount 个 short 型元素的缓冲区，
//                    用于存放采集结果，而 pResultArr 是这个缓冲区的首地址。
//                    
//返回值： 大于等于0  表缓冲区中读到的有效数据的个数
//             -1     表失败，应该进一步调用 ZT7660_GetLastErr 判断出错原因
ZT_API long _stdcall ZT7660_AIFifoEx(unsigned long cardNO,
                                   unsigned long wantReadCount,
                                   short *pResultArr);

//函数名称：ZT7660_CTStopEx
//函数功能：停止指定8253/8254芯片的指定通道工作
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//            chNO：通道号：1--3
//          CTMode：工作方式：0--5
//
//返回值：  0  表成功
//         -1  表失败，应该进一步调用 ZT7660_GetLastErr 判断出错原因

ZT_API long _stdcall ZT7660_DIBit(unsigned long cardNO, unsigned long chNO);

//函数名称：
//函数功能：得到指定通道的开关量输入状态
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//            chNO：通道号：1--16
//返回值：
//          0 表示低电平
//          1 表示高电平
//         -1 表示调用出错，应该进一步调用 ZT7660_GetLastErr 函数判断出错原因
ZT_API long _stdcall ZT7660_DIAll(unsigned long cardNO);

//函数名称：
//函数功能：得到所有通道的开关量输入状态。
//入口参数：
//          cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//返回值：
//             0     表示所有通道的开关量输入状态为低电平
//           0xFFFF  表示所有通道的开关量输入状态为高电平
//            -1     表示调用出错，应该进一步调用 ZT7660_GetLastErr 函数判断出错原因
ZT_API long _stdcall ZT7660_DOBit(unsigned long cardNO,
							  	   unsigned long chNO,
							 	   unsigned long nState);

//函数名称：
//函数功能：指定某通道的开关量输出状态
//入口参数：
//             cardNO：模块号，默认从 1 开始。有关这个参数的详细说明，请参考 ZT7660_OpenDevice 函数
//               chNO：通道号：1--16
//             nState：指定某通道的开关量输出状态：
//                       nState =    0    ，指定输出低电平
//                       nState = 1(或非0)，指定输出高电平
//返回值：  
//           0      表示成功
//          -1      表示调用出错，应该进一步调用 ZT7660_GetLastErr 函数判断出错原因
ZT_API long _stdcall ZT7660_DOAll(unsigned long cardNO, unsigned long nStateAll);